# praxis-forge

./: .md  README.md  acm_resources.md  capstone_learning_path.md  key_terms.md  settings.json  suggest_iterations.py  suggest_priorities.py  update_iterations.py  wasm_rust_use_cases.md
atlas-waypoints/: create_issues.sh  fetch_issues.sh  fetch_no_iteration.py  goal_issues.json  habit_issues.json  infrastructure_issues.json  issues.json  leptos_improvements.json  native_function_issues.json  prioritized_issues.json  project_issues.json  rust_frontend_innovation_issues.json  rust_wasm_innovation_issues.json  scss_issues.json  task_issues.json  ui_component_issues.json  updated_issues.json
forge-core/: .gitignore  README.md  mix.exs  schema.graphql
forge-core/config/: config.exs  dev.exs  runtime.exs  test.exs
forge-core/lib/: task_api.ex  task_api_web.ex
forge-core/test/: test_helper.exs
learning-plan/explorations/: ai_learning_path.md  comparisons.md  concrete_next_steps.md  links.md  research_papers.md  use_cases_resources.md  wasm_js_boundary.md
learning-plan/weeks/: 1-2.md  combined.md
praxis-atlas/: README.md  project-brief.md  project-plan-checklist-status.md  project-plan.md  tasklist.md
praxis-atlas/database/: enums.md  schema.md  strategy.md  tables.md
praxis-atlas/decisions/: database-architecture.md
praxis-web/: Cargo.toml  Trunk.toml  index.html
praxis-web/src/: lib.rs  main.rs
praxis-web/src/components/: mod.rs
praxis-web/src/components/ai/: mod.rs  recommendations.rs  smart_suggestions.rs
praxis-web/src/components/animation/: confetti.rs  mod.rs  task_transition.rs
praxis-web/src/components/common/: command_palette.rs  dropdown.rs  header.rs  mod.rs  theme_toggle.rs
praxis-web/src/components/debug/: mod.rs  signal_visualizer.rs
praxis-web/src/components/goal/: form.rs  item.rs
praxis-web/src/components/home/: mod.rs  principle_item.rs  principles.rs
praxis-web/src/components/metrics/: charts.rs  mod.rs  performance_monitor.rs  stats.rs
praxis-web/src/components/navigation/: navigation.rs
praxis-web/src/components/progress/: progress_bar.rs
praxis-web/src/components/task/: form.rs  item.rs  list.rs  virtualized_list.rs
praxis-web/src/graphql/mutations/: tasks.rs
praxis-web/src/pages/goals/: goals.rs
praxis-web/src/pages/home/: home.rs
praxis-web/src/pages/tasks/: tasks.rs
praxis-web/src/services/: graphql_service.rs  service_context.rs
praxis-web/src/styles/: custom-utilities.css  mod.rs  tailwind-bundle.css
praxis-workshop/: .gitignore  Cargo.toml  build.rs  index.html  issue.md  schema.graphql
praxis-workshop-two/: Cargo.toml  index.html
praxis-workshop-two/src/: app.css  app.rs  main.rs  utils.rs
praxis-workshop-two/src-tauri/: Cargo.toml  tauri.conf.json
praxis-workshop-two/src-tauri/src/: main.rs
praxis-workshop-two/src/api/: tasks.rs
praxis-workshop-two/src/components/task/: form.module.css  form.rs  item.module.css  item.rs  list.rs
praxis-workshop-two/src/pages/: home.rs
praxis-workshop-two/src/pages/tasks/: dashboard.rs  list.module.css  list.rs
praxis-workshop-two/src/state/: tasks.rs
praxis-workshop/src/: api.rs  app.css  app.rs  lib.rs  main.rs  subscription-example.rs
praxis-workshop/src-tauri/: Cargo.toml  tauri.conf.json
praxis-workshop/src-tauri/src/: lib.rs  main.rs
praxis-workshop/src-tauri/src/config/: mod.rs
praxis-workshop/src/actions/: goal_actions.rs  mod.rs  task_actions.rs
praxis-workshop/src/api/: goals.rs  tasks.rs
praxis-workshop/src/components/: mod.rs  nav.module.css  nav.rs  progress_bar.rs  task_form.rs  task_list.rs
praxis-workshop/src/components/ai/: recommendations.rs
praxis-workshop/src/components/common/: header.rs  mod.rs
praxis-workshop/src/components/goal/: form.rs  item.rs  list.rs
praxis-workshop/src/components/home/: mod.rs  principle_item.rs  principles.rs
praxis-workshop/src/components/navigation/: navigation.module.css  navigation.rs
praxis-workshop/src/components/progress/: progress_bar.rs
praxis-workshop/src/components/progress_bar/: progress_bar.rs
praxis-workshop/src/components/task/: form.module.css  form.rs  item.module.css  item.rs  list.module.css  list.rs  mod.rs
praxis-workshop/src/graphql/: client.rs  mod.rs  schema.rs
praxis-workshop/src/graphql/mutations/: goals.rs  tasks.rs
praxis-workshop/src/graphql/queries/: goals.rs  tasks.graphql  tasks.rs
praxis-workshop/src/hooks/: mod.rs  use_task.rs
praxis-workshop/src/pages/: home.module.css  home.rs  mod.rs
praxis-workshop/src/pages/goals/: goals.rs  mod.rs
praxis-workshop/src/pages/home/: home.rs
praxis-workshop/src/pages/tasks/: dashboard.module.css  dashboard.rs  tasks.rs
praxis-workshop/src/queries/: mod.rs  task_queries.rs
praxis-workshop/src/routes/: home.rs  mod.rs  routes.rs  settings.rs  tasks.rs
praxis-workshop/src/routes/tasks/: list.rs  mod.rs  use_tasks.rs
praxis-workshop/src/services/: graphql_service.rs  mod.rs  service_context.rs  tasks.rs  types.rs
praxis-workshop/src/state/: location.rs  mod.rs  tasks.rs  use_goals.rs  use_tasks.rs
praxis-workshop/src/styles/: custom-utilities.css  tailwind.rs
praxis-workshop/src/tests/: mod.rs
praxis-workshop/src/tests/components/: mod.rs  task_item_test.rs
praxis-workshop/src/tests/state/: mod.rs  tasks_test.rs
praxis-workshop/tests/: wasm.rs
(+58 files in other folders)
