[package]
name = "praxis-shop-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
serde_json = "1.0.139"
gloo-net = { version = "0.6.0", features = ["websocket"] }
futures = "0.3.31"
wasm-bindgen-test = "0.3.50"
cynic = { version = "3.10.0", features = ["http-reqwest"] }
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json"], default-features = false }
thaw = "0.4.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlDocument",
  "HtmlElement",
  "NodeList",
  "DomRect",
  "Performance",
  "PerformanceTiming"
  # Only include features you actually use
]}

[build-dependencies]
cynic-codegen = "3.10.0"

[dev-dependencies]
web-sys = { version = "0.3.77", features = ["HtmlElement"] }

[lib]
name = "praxis_shop_ui"
path = "src/lib.rs"

# Add these profile settings
[profile.release]
opt-level = 'z'  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Maximum size optimization
strip = true     # Strip symbols
panic = 'abort'  # Smaller code size for panic handling
