[package]
name = "praxis-workshop-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.133"
gloo-net = { version = "0.6.0", features = ["websocket"] }
futures = "0.3.31"
wasm-bindgen-test = "0.3.50"
cynic = { version = "3.10.0", features = ["http-reqwest"] }
async-trait = "0.1.86"
reqwest = { version = "0.12.9", features = ["json"] }
leptonic = { version = "0.5.0", features = ["full"] }

[workspace]
members = ["src-tauri"]

[build-dependencies]
cynic-codegen = "3.10.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement"] }

[lib]
name = "praxis_workshop_ui" 
path = "src/lib.rs"   
